bussiness policy updated

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ Over the past few years, I’ve worked on various coding projects and studied ho
                         <div class="h-full bg-gradient-to-t from-primary/90 to-secondary/90 flex items-end p-8">
                             <div class="text-white">
                                 <h3 class="text-2xl font-bold mb-2">Not Sure Yet?</h3>
-                                <p class="mb-6">Book a free 30-minute demo session with our instructor.</p>
+                                <p class="mb-6">Try the first class — full refund if you don’t love it.</p>
                                 <a href="https://wa.me/919650702766" class="inline-flex items-center justify-center px-6 py-3 border border-white text-base font-medium rounded-md text-primary bg-white hover:bg-gray-100 transition">
                                     <i class="fab fa-whatsapp mr-2"></i> WhatsApp for Demo
                                 </a>
