--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ Over the past few years, I’ve worked on various coding projects and studied ho
                                 <h3 class="text-2xl font-bold mb-2">Not Sure Yet?</h3>
                                 <p class="mb-6">Try the first class — full refund if you don’t love it.</p>
                                 <a href="https://wa.me/919650702766" class="inline-flex items-center justify-center px-6 py-3 border border-white text-base font-medium rounded-md text-primary bg-white hover:bg-gray-100 transition">
-                                    <i class="fab fa-whatsapp mr-2"></i> WhatsApp for Demo
+                                    <i class="fab fa-whatsapp mr-2"></i> WhatsApp Us
                                 </a>
                             </div>
                         </div>
