--- a/index.html
+++ b/index.html
@@ -235,7 +235,6 @@
                                 <svg class="h-5 w-5 text-secondary mr-2 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                                 </svg>
-                                <span>Functions and Modular Code</span>
                             </li>
                             <li class="flex items-start">
                                 <svg class="h-5 w-5 text-secondary mr-2 mt=0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -565,7 +564,14 @@ Over the past few years, I’ve worked on various coding projects and studied ho
                                 <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Student's Name</label>
                                 <input type="text" id="name" name="name" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-primary focus:border-primary">
                             </div>
-                            
+
+                            <!-- School Name field added below -->
+                            <div>
+                                <label for="school" class="block text-sm font-medium text-gray-700 mb-1">School Name</label>
+                                <input type="text" id="school" name="school" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-primary focus:border-primary">
+                            </div>
+                            <!-- End School Name field -->
+
                             <div>
                                 <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
                                 <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-primary focus:border-primary">
@@ -611,7 +617,7 @@ Over the past few years, I’ve worked on various coding projects and studied ho
                             <div class="text-white">
                                 <h3 class="text-2xl font-bold mb-2">Not Sure Yet?</h3>
                                 <p class="mb-6">Try the first class — full refund if you don’t love it.</p>
-                                <a href="https://wa.me/919650702766" class="inline-flex items-center justify-center px-6 py-3 border border-white text-base font-medium rounded-md text-primary bg-white hover:bg-gray-100 transition">
+                                <a href="https://wa.me/919258159902" class="inline-flex items-center justify-center px-6 py-3 border border-white text-base font-medium rounded-md text-primary bg-white hover:bg-gray-100 transition">
                                     <i class="fab fa-whatsapp mr-2"></i> WhatsApp Us
                                 </a>
                             </div>
@@ -624,7 +630,7 @@ Over the past few years, I’ve worked on various coding projects and studied ho
 
     <!-- WhatsApp Button -->
     <div class="fixed bottom-6 right-6 z-50">
-        <a href="https://wa.me/919650702766" class="w-14 h-14 bg-green-500 rounded-full shadow-lg flex items-center justify-center hover:bg-green-600 transition">
+        <a href="https://wa.me/919258159902" class="w-14 h-14 bg-green-500 rounded-full shadow-lg flex items-center justify-center hover:bg-green-600 transition">
             <!-- <i class="fab fa-whatsapp text-2xl text-white"></i> -->
             <img src="image/whatsapp.png" alt="WhatsApp" class="absolute inset-0 w-full h-full rounded-full opacity-75">
         </a>
@@ -665,7 +671,7 @@ Over the past few years, I’ve worked on various coding projects and studied ho
                             <svg class="h-5 w-5 text-primary mr-2 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
-                            <a href="tel:++91 9650702766">+91 9650702766</a>
+                            <a href="tel:++91 9258159902">+91 9258159902</a>
                         </li>
                         <!-- <li class="flex items-start">
                             <svg class="h-5 w-5 text-primary mr-2 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
