--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="#faq" class="font-medium hover:text-primary transition">FAQ</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <a href="/path/to/your/course-plan.pdf" download="CodeForAi-Course-Plan.pdf" class="hidden sm:inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
+                    <a href="/workspaces/CodeForAi/codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="hidden sm:inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                         </svg>
@@ -79,7 +79,7 @@
                     <a href="#instructor" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-100 transition">Instructor</a>
                     <a href="#pricing" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-100 transition">Pricing</a>
                     <a href="#faq" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-100 transition">FAQ</a>
-                    <a href="/path/to/your/course-plan.pdf" download="CodeForAi-Course-Plan.pdf" class="block px-3 py-2 rounded-md text-base font-medium text-white bg-secondary hover:bg-green-700 transition flex items-center justify-center">
+                    <a href="/workspaces/CodeForAi/codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="block px-3 py-2 rounded-md text-base font-medium text-white bg-secondary hover:bg-green-700 transition flex items-center justify-center">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                         </svg>
@@ -100,7 +100,7 @@
                     <p class="text-lg text-gray-600 mb-8">Master C++ fundamentals and discover how coding builds the foundation for modern technology. Designed specifically for school students (Classes 8–12).</p>
                     <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
                         <a href="#register" class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-primary hover:bg-blue-700 transition">Enroll Now</a>
-                        <a href="#register" class="inline-flex items-center justify-center px-6 py-3 border border-primary text-base font-medium rounded-md text-primary bg-white hover:bg-gray-50 transition">Book Free Demo</a>
+                        <a href="tel:++91 9650702766" class="inline-flex items-center justify-center px-6 py-3 border border-primary text-base font-medium rounded-md text-primary bg-white hover:bg-gray-50 transition">Call Us</a>
                     </div>
                 </div>
                 <div class="md:w-1/2">
@@ -179,7 +179,7 @@
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold font-heading mb-4">What We Teach In 18 Sessions</h2>
                 <p class="text-gray-600 max-w-3xl mx-auto mb-6">Comprehensive curriculum</p>
-                <a href="/path/to/your/course-plan.pdf" download="CodeForAi-Course-Plan.pdf" class="inline-flex items-center justify-center px-6 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
+                <a href="/workspaces/CodeForAi/codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="inline-flex items-center justify-center px-6 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
                     <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                     </svg>
