--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="#faq" class="font-medium hover:text-primary transition">FAQ</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <a href="/workspaces/CodeForAi/codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="hidden sm:inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
+                    <a href="codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="hidden sm:inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                         </svg>
@@ -79,7 +79,7 @@
                     <a href="#instructor" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-100 transition">Instructor</a>
                     <a href="#pricing" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-100 transition">Pricing</a>
                     <a href="#faq" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-100 transition">FAQ</a>
-                    <a href="/workspaces/CodeForAi/codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="block px-3 py-2 rounded-md text-base font-medium text-white bg-secondary hover:bg-green-700 transition flex items-center justify-center">
+                    <a href="codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="block px-3 py-2 rounded-md text-base font-medium text-white bg-secondary hover:bg-green-700 transition flex items-center justify-center">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                         </svg>
@@ -179,7 +179,7 @@
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold font-heading mb-4">What We Teach In 18 Sessions</h2>
                 <p class="text-gray-600 max-w-3xl mx-auto mb-6">Comprehensive curriculum</p>
-                <a href="/workspaces/CodeForAi/codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="inline-flex items-center justify-center px-6 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
+                <a href="codeforai.pdf" download="CodeForAi-Course-Plan.pdf" class="inline-flex items-center justify-center px-6 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-secondary hover:bg-green-700 transition">
                     <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                     </svg>
