--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ Over the past few years, I’ve worked on various coding projects and studied ho
                             
                             <div class="pt-2">
                                 <button type="submit" class="w-full inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-primary hover:bg-blue-700 transition">
-                                    Enroll Now - ₹1,499
+                                    Invest Now - ₹1,499
                                 </button>
                             </div>
                         </form>
