--- a/index.html
+++ b/index.html
@@ -605,10 +605,13 @@ Over the past few years, I’ve worked on various coding projects and studied ho
                             </div>
                             
                             <div class="pt-2">
-                                <button type="submit" class="w-full inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-primary hover:bg-blue-700 transition">
-                                    Invest Now - ₹1,499
-                                </button>
+                                <a href="https://rzp.io/rzp/codeforai" target="_blank" rel="noopener noreferrer">
+                                    <button type="button" class="w-full inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-primary hover:bg-blue-700 transition">
+                                    Invest Now – ₹1,499
+                                    </button>
+                                </a>
                             </div>
+
                         </form>
                     </div>
                     
