--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                                 <svg class="h-5 w-5 text-secondary mr-2 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                                 </svg>
+                                <span>Functions and Modular Code</span>
                             </li>
                             <li class="flex items-start">
                                 <svg class="h-5 w-5 text-secondary mr-2 mt=0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
