--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
                                     <option value="11">Class 11</option>
                                     <option value="12">Class 12</option>
                                 </select>
-                            </div>
+                            </div> 
 
                             <div>
                                 <label for="batch" class="block text-sm font-medium text-gray-700 mb-1">Preferred
@@ -753,15 +753,22 @@
                                 </select>
                             </div>
 
-                            <div class="pt-2">
-                                <a id="investBtn" href="https://rzp.io/rzp/codeforai" target="_blank"
-                                    rel="noopener noreferrer"
-                                    class="w-full inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-primary hover:bg-blue-700 transition">
-                                    Invest Now – ₹1,499
-                                </a>
+                            <!-- Suggestion Box -->
+                            <div>
+                                <label for="suggestion" class="block text-sm font-medium text-gray-700 mb-1">Suggestion
+                                    Box (Optional)</label>
+                                <textarea id="suggestion" name="suggestion" rows="3"
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-primary focus:border-primary"
+                                    placeholder="Share your suggestions or feedback..."></textarea>
                             </div>
 
+                            <button id="investBtn" type="submit"
+                                class="w-full inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-primary hover:bg-blue-700 transition">
+                                Invest Now – ₹1,499
+                            </button>
+
                         </form>
+                        <div id="form-status" class="mt-4 text-sm font-semibold"></div>
                     </div>
 
                     <div class="hidden md:block md:w-1/2 bg-cover bg-center"
